--- a/games/src/main/resources/application.properties
+++ b/games/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2009Dialect
 #spring.data.jpa.repositories.bootstrap-mode=default
 
 #Hibernate ddl auto (none, create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
